--- a/app/src/main/res/layout/fragment_server.xml
+++ b/app/src/main/res/layout/fragment_server.xml
@@ -9,31 +9,30 @@
             type="org.publicntp.gnssreader.repository.TimeStorageConsumer" />
     </data>
 
-    <LinearLayout
+    <android.support.design.widget.CoordinatorLayout
         android:layout_width="match_parent"
-        android:layout_height="match_parent"
-        android:orientation="vertical"
-        tools:context="org.publicntp.gnssreader.ui.ServerFragment">
-
-        <lecho.lib.hellocharts.view.LineChartView
-            android:id="@+id/server_line_graph"
-            android:layout_width="match_parent"
-            android:layout_height="200dp"
-            android:layout_marginEnd="16dp"
-            android:layout_marginStart="16dp"
-            android:layout_marginTop="16dp" />
+        android:layout_height="match_parent">
 
         <LinearLayout
             android:layout_width="match_parent"
-            android:layout_height="wrap_content"
-            android:orientation="vertical">
+            android:layout_height="match_parent"
+            android:orientation="vertical"
+            tools:context="org.publicntp.gnssreader.ui.ServerFragment">
+
+            <lecho.lib.hellocharts.view.ColumnChartView
+                android:id="@+id/server_bar_graph"
+                android:layout_width="match_parent"
+                android:layout_height="200dp"
+                android:layout_marginEnd="16dp"
+                android:layout_marginStart="16dp"
+                android:layout_marginTop="16dp" />
 
             <LinearLayout
                 android:id="@+id/server_layout_net_activity"
                 android:layout_width="match_parent"
                 android:layout_height="0dp"
                 android:layout_margin="16dp"
-                android:layout_weight="1"
+                android:layout_weight="3"
                 android:orientation="horizontal">
 
                 <TextView
@@ -66,7 +65,8 @@
             <LinearLayout
                 android:layout_width="match_parent"
                 android:layout_height="0dp"
-                android:layout_weight="2"
+                android:layout_marginBottom="10dp"
+                android:layout_weight="5"
                 android:orientation="vertical">
 
                 <LinearLayout
@@ -75,13 +75,13 @@
                     android:layout_height="wrap_content"
                     android:layout_marginEnd="16dp"
                     android:layout_marginStart="16dp"
-                    android:layout_marginTop="24dp"
                     android:orientation="horizontal">
 
                     <TextView
                         android:id="@+id/server_display_time"
                         android:layout_width="wrap_content"
                         android:layout_height="wrap_content"
+                        android:layout_marginRight="10dp"
                         android:fontFamily="@font/roboto"
                         android:text="@{servertimestorage.getAdjustedDateString(context)}"
                         android:textColor="@color/primary_dark"
@@ -136,21 +136,23 @@
                 </LinearLayout>
             </LinearLayout>
 
-            <Button
+            <ToggleButton
                 android:id="@+id/server_btn_toggle"
-                style="@style/AppTheme.Button.Large"
                 android:layout_width="match_parent"
                 android:layout_height="0dp"
+                android:layout_marginBottom="24dp"
                 android:layout_marginEnd="16dp"
                 android:layout_marginStart="16dp"
                 android:layout_marginTop="24dp"
-                android:layout_weight="1"
+                android:layout_weight="2.8"
                 android:fontFamily="@font/roboto_medium"
-                android:text="@string/server_status"
+                android:textOff="@string/server_off"
+                android:textOn="@string/server_on"
                 android:textSize="20sp"
+                android:textStyle="bold"
+                android:theme="@style/AppTheme.ToggleButton"
                 tools:text="Server On" />
 
         </LinearLayout>
-
-    </LinearLayout>
+    </android.support.design.widget.CoordinatorLayout>
 </layout>
