--- a/app/src/main/res/layout/fragment_time.xml
+++ b/app/src/main/res/layout/fragment_time.xml
@@ -16,7 +16,7 @@
     <LinearLayout
         android:layout_width="match_parent"
         android:layout_height="match_parent"
-        android:layout_margin="15dp"
+        android:padding="15dp"
         android:orientation="vertical"
         tools:context="org.publicntp.gnssreader.ui.TimeFragment">
 
@@ -30,7 +30,7 @@
 
             <LinearLayout
                 android:id="@+id/time_layout_logo"
-                android:layout_width="match_parent"
+                android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
                 android:orientation="horizontal">
 
