--- a/app/src/main/res/values/colors.xml
+++ b/app/src/main/res/values/colors.xml
@@ -14,6 +14,9 @@
     <color name="grey">#999999</color>
     <color name="greylight">#CCCCCC</color>
 
-    <color name="blue">#3333FF</color>
+    <color name="blue">#5595FF</color>
+
+    <color name="packet_incoming_purple">#A17DB7</color>
+    <color name="packet_outgoing_green">#7DBB8F</color>
 
 </resources>
