--- a/app/src/main/res/layout/fragment_satellite.xml
+++ b/app/src/main/res/layout/fragment_satellite.xml
@@ -3,78 +3,61 @@
     android:layout_width="match_parent"
     android:layout_height="match_parent">
 
-    <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
+    <RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
         xmlns:tools="http://schemas.android.com/tools"
         android:layout_width="match_parent"
         android:layout_height="match_parent"
         android:orientation="vertical"
+        android:layout_margin="10dp"
         tools:context="org.publicntp.gnssreader.ui.SatelliteFragment">
 
-        <RelativeLayout
-            android:id="@+id/satellite_layout_count"
-            android:layout_width="match_parent"
-            android:layout_height="0dp"
-            android:layout_margin="10dp"
-            android:layout_weight="3.5">
+        <TextView
+            android:id="@+id/satellites_in_view_label"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:layout_alignParentLeft="true"
+            android:text="@string/in_view"
+            android:textSize="18sp" />
 
-            <LinearLayout
-                android:layout_width="wrap_content"
-                android:layout_height="match_parent"
-                android:layout_alignParentStart="true"
-                android:orientation="vertical">
+        <TextView
+            android:id="@+id/satellites_in_view"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:layout_alignParentLeft="true"
+            android:layout_below="@id/satellites_in_view_label"
+            android:text="0"
+            android:textSize="36sp" />
 
-                <TextView
-                    android:layout_width="match_parent"
-                    android:layout_height="wrap_content"
-                    android:text="@string/in_view"
-                    android:textSize="18sp" />
 
-                <TextView
-                    android:id="@+id/satellites_in_view"
-                    android:layout_width="match_parent"
-                    android:layout_height="wrap_content"
-                    android:text="0"
-                    android:textSize="36sp" />
+        <TextView
+            android:id="@+id/satellites_in_use_label"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:layout_alignParentEnd="true"
+            android:text="@string/in_use"
+            android:textSize="18sp" />
 
-            </LinearLayout>
-
-            <LinearLayout
-                android:layout_width="wrap_content"
-                android:layout_height="match_parent"
-                android:layout_alignParentEnd="true"
-                android:orientation="vertical">
-
-                <TextView
-                    android:layout_width="match_parent"
-                    android:layout_height="wrap_content"
-                    android:text="@string/in_use"
-                    android:textSize="18sp" />
-
-                <TextView
-                    android:id="@+id/satellites_in_use"
-                    android:layout_width="match_parent"
-                    android:layout_height="wrap_content"
-                    android:text="0"
-                    android:textAlignment="textEnd"
-                    android:textSize="36sp" />
-
-            </LinearLayout>
-        </RelativeLayout>
+        <TextView
+            android:id="@+id/satellites_in_use"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:layout_alignParentEnd="true"
+            android:layout_below="@id/satellites_in_use_label"
+            android:text="0"
+            android:textAlignment="textEnd"
+            android:textSize="36sp" />
 
         <org.publicntp.gnssreader.ui.custom.SatelliteRadialChart
             android:id="@+id/satellite_radial_chart"
             android:layout_width="match_parent"
-            android:layout_height="0dp"
-            android:layout_marginTop="-25dp"
-            android:layout_weight="16" />
+            android:layout_height="420dp"
+            android:layout_alignParentTop="true"/>
 
-
-        <lecho.lib.hellocharts.view.ColumnChartView
-            android:id="@+id/satellite_bar_chart"
+        <FrameLayout
+            android:id="@+id/satellite_details_container"
             android:layout_width="match_parent"
-            android:layout_height="0dp"
-            android:layout_weight="8" />
-
-
-    </LinearLayout>
+            android:layout_height="1090dp"
+            android:layout_alignParentBottom="true"
+            android:layout_below="@id/satellite_radial_chart" />
+    </RelativeLayout>
 </android.support.design.widget.CoordinatorLayout>
