--- a/app/src/main/res/layout/fragment_time.xml
+++ b/app/src/main/res/layout/fragment_time.xml
@@ -48,11 +48,10 @@
                     android:layout_width="wrap_content"
                     android:layout_height="wrap_content"
                     android:layout_gravity="center_vertical"
-                    android:fontFamily="@font/roboto"
+                    android:fontFamily="@font/roboto_medium"
                     android:text="PublicNTP"
-                    android:textColor="@color/black"
+                    android:textColor="@color/greydark"
                     android:textSize="26sp" />
-
 
             </LinearLayout>
 
