--- a/app/src/main/res/layout/dialog_options.xml
+++ b/app/src/main/res/layout/dialog_options.xml
@@ -3,86 +3,104 @@
     android:layout_width="match_parent"
     android:layout_height="match_parent"
     android:layout_margin="10dp"
-    android:orientation="vertical"
-    android:padding="15dp">
+    android:orientation="vertical">
 
-    <TextView
-        android:layout_width="wrap_content"
+    <android.support.design.widget.CoordinatorLayout
+        android:layout_width="match_parent"
         android:layout_height="wrap_content"
-        android:text="@string/time_zone"
-        android:textSize="@dimen/option_text_size"
-        android:textStyle="bold" />
+        android:paddingLeft="15dp"
+        android:paddingRight="15dp"
+        android:paddingTop="15dp">
 
-    <Spinner
-        android:id="@+id/options_timezone"
-        android:layout_width="match_parent"
-        android:layout_height="wrap_content" />
-    
-    <Space
-        android:layout_width="match_parent"
-        android:layout_height="@dimen/option_spacing" />
+        <LinearLayout
+            android:layout_width="match_parent"
+            android:layout_height="match_parent"
+            android:orientation="vertical">
 
-    <TextView
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:text="@string/location_units"
-        android:textSize="@dimen/option_text_size"
-        android:textStyle="bold" />
+            <TextView
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:text="@string/time_zone"
+                android:textSize="@dimen/option_text_size" />
 
-    <Spinner
-        android:id="@+id/options_location_units"
-        android:layout_width="match_parent"
-        android:layout_height="wrap_content" />
+            <Spinner
+                android:id="@+id/options_timezone"
+                android:layout_width="match_parent"
+                android:layout_height="wrap_content" />
 
-    <Space
-        android:layout_width="match_parent"
-        android:layout_height="@dimen/option_spacing" />
+            <Space
+                android:layout_width="match_parent"
+                android:layout_height="@dimen/option_spacing" />
+
+            <TextView
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:text="@string/location_units"
+                android:textSize="@dimen/option_text_size" />
+
+            <Spinner
+                android:id="@+id/options_location_units"
+                android:layout_width="match_parent"
+                android:layout_height="wrap_content" />
+
+            <Space
+                android:layout_width="match_parent"
+                android:layout_height="@dimen/option_spacing" />
+
+            <LinearLayout
+                android:id="@+id/options_share_location"
+                android:layout_width="match_parent"
+                android:layout_height="wrap_content"
+                android:orientation="horizontal">
+
+                <TextView
+                    android:layout_width="match_parent"
+                    android:layout_height="wrap_content"
+                    android:text="@string/share_location"
+                    android:textSize="@dimen/option_text_size" />
+            </LinearLayout>
+
+            <Space
+                android:layout_width="match_parent"
+                android:layout_height="@dimen/option_spacing" />
+
+            <LinearLayout
+                android:id="@+id/options_copy_to_clipboard"
+                android:layout_width="match_parent"
+                android:layout_height="wrap_content">
+
+                <TextView
+                    android:layout_width="match_parent"
+                    android:layout_height="wrap_content"
+                    android:layout_gravity="center_vertical"
+                    android:text="@string/copy_to_clipboard"
+                    android:textSize="@dimen/option_text_size" />
+            </LinearLayout>
+
+            <Space
+                android:layout_width="match_parent"
+                android:layout_height="@dimen/option_spacing" />
+        </LinearLayout>
+    </android.support.design.widget.CoordinatorLayout>
 
     <LinearLayout
-        android:id="@+id/options_share_location"
         android:layout_width="match_parent"
-        android:layout_height="wrap_content">
+        android:layout_height="wrap_content"
+        android:orientation="horizontal">
 
-        <ImageView
-            android:layout_width="@dimen/option_icon_width"
+        <android.support.v4.widget.Space
+            android:layout_width="0dp"
             android:layout_height="wrap_content"
-            android:scaleType="center"
-            android:layout_gravity="center_vertical"
-            android:src="@drawable/share" />
+            android:layout_weight="1" />
 
-        <TextView
-            android:layout_width="match_parent"
+        <Button
+            android:id="@+id/options_done"
+            style="@style/AppTheme.Button.Large"
+            android:layout_width="0dp"
             android:layout_height="wrap_content"
-            android:layout_gravity="center_vertical"
-            android:layout_marginLeft="@dimen/option_spacing"
-            android:text="@string/share_location"
-            android:textStyle="bold"
-            android:textSize="@dimen/option_text_size" />
-    </LinearLayout>
-
-    <Space
-        android:layout_width="match_parent"
-        android:layout_height="@dimen/option_spacing" />
-
-    <LinearLayout
-        android:id="@+id/options_copy_to_clipboard"
-        android:layout_width="match_parent"
-        android:layout_height="wrap_content">
-
-        <ImageView
-            android:layout_width="@dimen/option_icon_width"
-            android:layout_height="wrap_content"
-            android:scaleType="center"
-            android:layout_gravity="center_vertical"
-            android:src="@drawable/copy_to_clipboard" />
-
-        <TextView
-            android:layout_width="match_parent"
-            android:layout_height="wrap_content"
-            android:layout_gravity="center_vertical"
-            android:layout_marginLeft="@dimen/option_spacing"
-            android:text="@string/copy_to_clipboard"
-            android:textStyle="bold"
-            android:textSize="@dimen/option_text_size" />
+            android:layout_gravity="right"
+            android:layout_weight="1"
+            android:text="Done"
+            android:textColor="@color/white" />
     </LinearLayout>
 </LinearLayout>
