--- a/app/src/main/res/layout/fragment_satellite.xml
+++ b/app/src/main/res/layout/fragment_satellite.xml
@@ -9,7 +9,7 @@
         android:layout_height="match_parent"
         android:orientation="vertical"
         android:layout_margin="10dp"
-        tools:context="org.publicntp.gnssreader.ui.SatelliteFragment">
+        tools:context="org.publicntp.gnssreader.ui.satellite.SatelliteFragment">
 
         <TextView
             android:id="@+id/satellites_in_view_label"
@@ -47,7 +47,7 @@
             android:textAlignment="textEnd"
             android:textSize="36sp" />
 
-        <org.publicntp.gnssreader.ui.custom.SatelliteRadialChart
+        <org.publicntp.gnssreader.ui.satellite.SatelliteRadialChart
             android:id="@+id/satellite_radial_chart"
             android:layout_width="match_parent"
             android:layout_height="420dp"
