--- a/app/src/main/res/layout/fragment_satellite_detail.xml
+++ b/app/src/main/res/layout/fragment_satellite_detail.xml
@@ -2,7 +2,8 @@
 <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
-    android:orientation="vertical" >
+    android:layout_margin="10dp"
+    android:orientation="vertical">
 
     <RelativeLayout
         android:layout_width="match_parent"
@@ -15,8 +16,7 @@
             android:layout_alignParentLeft="true"
             android:hint="@string/satellite_title_example"
             android:textColor="@color/blue"
-            android:textSize="30sp"
-            android:textStyle="bold" />
+            android:textSize="30sp" />
 
         <ImageView
             android:id="@+id/satellite_detail_close"
@@ -24,55 +24,6 @@
             android:layout_height="35dp"
             android:layout_alignParentRight="true"
             android:src="@drawable/close" />
-    </RelativeLayout>
-
-    <RelativeLayout
-        android:layout_width="match_parent"
-        android:layout_height="wrap_content">
-
-        <LinearLayout
-            android:layout_width="wrap_content"
-            android:layout_height="wrap_content"
-            android:layout_alignParentRight="true"
-            android:orientation="horizontal">
-
-            <TextView
-                android:layout_width="wrap_content"
-                android:layout_height="wrap_content"
-                android:layout_marginRight="@dimen/satellite_detail_label_margin"
-                android:text="SVN: "
-                android:textSize="@dimen/satellite_detail_text_size"
-                android:textStyle="bold" />
-
-            <TextView
-                android:id="@+id/satellite_svn"
-                android:layout_width="wrap_content"
-                android:layout_height="wrap_content"
-                android:hint="66"
-                android:textSize="@dimen/satellite_detail_text_size" />
-        </LinearLayout>
-
-        <LinearLayout
-            android:layout_width="wrap_content"
-            android:layout_height="wrap_content"
-            android:layout_alignParentLeft="true"
-            android:orientation="horizontal">
-
-            <TextView
-                android:layout_width="wrap_content"
-                android:layout_height="wrap_content"
-                android:layout_marginRight="@dimen/satellite_detail_label_margin"
-                android:text="@string/constellation"
-                android:textSize="@dimen/satellite_detail_text_size"
-                android:textStyle="bold" />
-
-            <TextView
-                android:id="@+id/satellite_constellation"
-                android:layout_width="wrap_content"
-                android:layout_height="wrap_content"
-                android:hint="Galileo"
-                android:textSize="@dimen/satellite_detail_text_size" />
-        </LinearLayout>
     </RelativeLayout>
 
     <LinearLayout
@@ -85,14 +36,15 @@
             android:layout_height="wrap_content"
             android:layout_marginRight="@dimen/satellite_detail_label_margin"
             android:text="@string/signal_to_noise_ratio"
-            android:textSize="@dimen/satellite_detail_text_size"
-            android:textStyle="bold" />
+            android:textColor="@color/black"
+            android:textSize="@dimen/satellite_detail_text_size" />
 
         <TextView
             android:id="@+id/satellite_signal_to_noise"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:hint="26.1 to 1"
+            android:textColor="@color/satellite_detail_text"
             android:textSize="@dimen/satellite_detail_text_size" />
     </LinearLayout>
 
@@ -106,14 +58,15 @@
             android:layout_height="wrap_content"
             android:layout_marginRight="@dimen/satellite_detail_label_margin"
             android:text="@string/altitude_angle"
-            android:textSize="@dimen/satellite_detail_text_size"
-            android:textStyle="bold" />
+            android:textColor="@color/black"
+            android:textSize="@dimen/satellite_detail_text_size" />
 
         <TextView
             android:id="@+id/satellite_altitude"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:hint="@string/satellite_altitude_example"
+            android:textColor="@color/satellite_detail_text"
             android:textSize="@dimen/satellite_detail_text_size" />
     </LinearLayout>
 
@@ -127,14 +80,15 @@
             android:layout_height="wrap_content"
             android:layout_marginRight="@dimen/satellite_detail_label_margin"
             android:text="@string/heading"
-            android:textSize="@dimen/satellite_detail_text_size"
-            android:textStyle="bold" />
+            android:textColor="@color/black"
+            android:textSize="@dimen/satellite_detail_text_size" />
 
         <TextView
             android:id="@+id/satellite_heading"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:hint="@string/satellite_heading_example"
+            android:textColor="@color/satellite_detail_text"
             android:textSize="@dimen/satellite_detail_text_size" />
     </LinearLayout>
 
