--- a/app/src/main/res/layout/fragment_time.xml
+++ b/app/src/main/res/layout/fragment_time.xml
@@ -6,18 +6,18 @@
 
         <variable
             name="timestorage"
-            type="org.publicntp.gnssreader.repository.TimeStorageConsumer" />
+            type="org.publicntp.gnssreader.repository.time.TimeStorageConsumer" />
 
         <variable
             name="locationstorage"
-            type="org.publicntp.gnssreader.repository.LocationStorageConsumer" />
+            type="org.publicntp.gnssreader.repository.location.LocationStorageConsumer" />
     </data>
 
     <LinearLayout
         android:layout_width="match_parent"
         android:layout_height="match_parent"
-        android:padding="15dp"
         android:orientation="vertical"
+        android:padding="15dp"
         tools:context="org.publicntp.gnssreader.ui.time.TimeFragment">
 
         <Space
@@ -55,14 +55,15 @@
 
             </LinearLayout>
 
-            <TextView
+            <ImageButton
                 android:id="@+id/time_options"
-                android:layout_width="wrap_content"
-                android:layout_height="wrap_content"
-                android:layout_alignParentRight="true"
+                android:layout_width="35dp"
+                android:layout_height="35dp"
+                android:layout_alignParentEnd="true"
                 android:layout_centerVertical="true"
-                android:layout_marginRight="10dp"
-                android:textSize="18sp"
+                android:layout_marginEnd="10dp"
+                android:background="@drawable/options_button_background"
+                android:src="@drawable/ic_more_vert_white_24dp"
                 android:text="@string/time_options_text"
                 android:textColor="@color/blue" />
         </RelativeLayout>
@@ -86,7 +87,6 @@
                 android:text="@{timestorage.getAdjustedDateString(context)}"
                 android:textColor="@color/primary_dark"
                 android:textSize="@dimen/large_detail_text_size"
-                android:textStyle="bold"
                 tools:text="00:00:00.00" />
 
             <TextView
@@ -142,24 +142,23 @@
             android:layout_marginBottom="0dp"
             android:layout_marginStart="0dp"
             android:fontFamily="@font/roboto"
-            android:text="@{locationstorage.stringLatitude}"
+            android:text="@{locationstorage.string}"
             android:textColor="@color/primary_dark"
             android:textSize="@dimen/large_detail_text_size"
-            android:textStyle="bold"
             tools:text="000.0000° N" />
 
-        <TextView
-            android:id="@+id/time_text_longitude_display"
-            android:layout_width="wrap_content"
-            android:layout_height="wrap_content"
-            android:layout_marginBottom="0dp"
-            android:layout_marginStart="0dp"
-            android:fontFamily="@font/roboto"
-            android:text="@{locationstorage.stringLongitude}"
-            android:textColor="@color/primary_dark"
-            android:textSize="@dimen/large_detail_text_size"
-            android:textStyle="bold"
-            tools:text="000.0000° W" />
+        <!--<TextView-->
+        <!--android:id="@+id/time_text_longitude_display"-->
+        <!--android:layout_width="wrap_content"-->
+        <!--android:layout_height="wrap_content"-->
+        <!--android:layout_marginBottom="0dp"-->
+        <!--android:layout_marginStart="0dp"-->
+        <!--android:fontFamily="@font/roboto"-->
+        <!--android:text="@{locationstorage.string2}"-->
+        <!--android:textColor="@color/primary_dark"-->
+        <!--android:textSize="@dimen/large_detail_text_size"-->
+        <!--android:textStyle="bold"-->
+        <!--tools:text="000.0000° W" />-->
 
         <LinearLayout
             android:layout_width="wrap_content"
